api not showing solved

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,9 @@ body {
     --red: #f5b82e;
     --secondary-text: #ACACAC;
     --border: #292929;
+    --accent: #ff7aa7;
+    --orange: #ffa42c;
+    --dark-accent: #ad003b;
 }
+
+
